# log-sniffer

./: Cargo.toml  readme.md
src/: logs.rs  main.rs
wix/: main.wxs
