[package]
name = "hog"
version = "0.1.0"
edition = "2021"
authors = ["Chameleo <info@chameleo.dev>"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
chrono = "0.4.2"
tungstenite = { version = "0.21.0", features = ["native-tls"]}
url = "2.5.0"
[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
